added more accurate timing

--- a/code/Makefile
+++ b/code/Makefile
@@ -15,7 +15,7 @@ LOGS	   := logs
 ARCH=$(shell uname | sed -e 's/-.*//g')
 OBJDIR=objs
 CXX=g++ -m64
-CXXFLAGS=-O3 -Wall -g
+CXXFLAGS=-O3 -Wall -g -std=c++11
 HOSTNAME=$(shell hostname)
 
 LIBS       :=
